--- a/工作日志.md
+++ b/工作日志.md
@@ -1,6 +1,7 @@
 # 工作日志
 
 - 指令集文档格式修改
+
 - update drv_hwtimer  [[bsp\][lpc55s69]update:drv_hwtimer by Z8MAN8 · Pull Request #7385 · RT-Thread/rt-thread (github.com)](https://github.com/RT-Thread/rt-thread/pull/7385)
 
   在测试 drv_hwtimer  的过程中发现，由于SDK的更新，部分 api 发生了变化，并且针对多个定时器的情况，按照RT-Thread的规范进行了优化完善。并且还发现`int rt_hw_wdt_init(void);`在`drv_hwtimer.h`文件中声明，而`int rt_hw_hwtimer_init(void);`在`drv_wdt.h`文件中声明，两者错乱，于是进行调整。
@@ -43,3 +44,9 @@
 - gt911软件包：[[update\] 添加i2c从机地址设置，更新头文件引用 by Z8MAN8 · Pull Request #1 · RiceChen/gt911 (github.com)](https://github.com/RiceChen/gt911/pull/1)
 
 - DRV LCD TOUCH：[[bsp\][lpc55sxx]add: drv_lcd and drv_touch by Z8MAN8 · Pull Request #7569 · RT-Thread/rt-thread (github.com)](https://github.com/RT-Thread/rt-thread/pull/7569)
+
+- RT-Thread LVGL 触摸屏对接记录 :  具体记录在同名文件中
+
+  [[bsp\][lpc55sxx]add: adaptation LVGL by Z8MAN8 · Pull Request #7585 · RT-Thread/rt-thread (github.com)](https://github.com/RT-Thread/rt-thread/pull/7585)
+
+- 
