--- a/工作日志.md
+++ b/工作日志.md
@@ -49,4 +49,8 @@
 
   [[bsp\][lpc55sxx]add: adaptation LVGL by Z8MAN8 · Pull Request #7585 · RT-Thread/rt-thread (github.com)](https://github.com/RT-Thread/rt-thread/pull/7585)
 
-- 
+- 修改 soft i2c 和 soft spi 格式，之后可以在 menuconfig 中直接选择想要使用软件模拟总线的引脚，大大方便了用户使用的便捷和灵活度。并且解决了硬件和软件 I2C 的冲突问题，之后软件 I2C 和硬件 I2C 可以同时使用，有效提高了用户的体验。
+
+  [[bsp\][lpc55sxx]update: drv_soft_i2c drv_soft_spi by Z8MAN8 · Pull Request #7596 · RT-Thread/rt-thread (github.com)](https://github.com/RT-Thread/rt-thread/pull/7596)
+
+- LCD模块市售以后，在README中添加相关信息
