--- a/工作日志.md
+++ b/工作日志.md
@@ -1,5 +1,37 @@
 # 工作日志
 
+- 修改 1 次指令集文档格式修改；
+- 总计提交 13 个 PR；
+- 编写 1 个快速生成对接RTT常用外设驱动的模板脚本；
+- 修改了 1 个定时器外设 api 的 bug；
+- 修改了 1 个定时器外设函数声明的 bug；
+- 修改了 1 个 WDT 外设 api 的 bug；
+- 修改了 1 个 WDT 外设函数声明的 bug；
+- 修改了 1 个 SD sample 的 bug；
+- 测试添加了 1 个 RW007 模块驱动；
+- 修改了 1 个  rtconfig.py 中关于编译器配置的 bug；
+- 修改了 1 个 drv_soft_i2c 中引脚定义错误的bug；
+- 修改了 1 个 drv_spi api 的 bug；
+- 去除了  drv_led drv_key 精简 drivers 文件夹
+- 添加了 NXP LCD st9976 的 driver；
+- 添加了 NXP LCD gt911 的 driver；
+- 修改了 1 个 gt911 软件包的 bug；
+- 添加了 lvgl 组件对接程序;
+- 编写 1 篇lpc55s69 LVGL对接微信文章；
+- 修改了 1 个 drv_soft_i2c 和 drv_i2c 设备命名冲突的bug；
+- 修改了 1 个 drv_soft_spi  和 drv_spi 设备命名冲突的bug；
+- 添加 1 个 LPC55s69 RTduino 线程间通讯demo；
+- 重新生成lpc55sxx系列默认config文件及keil工程；
+- 测试使用lpc55sxx系列串口DMA；
+- 编写 1 个快速生成对接RTT常用外设驱动的模板脚本；
+- 进行 1 次 RT-Thread LPC55s69 RTduino 汇报。
+
+
+
+
+
+## 具体情况及相关PR
+
 - 指令集文档格式修改
 
 - update drv_hwtimer  [[bsp\][lpc55s69]update:drv_hwtimer by Z8MAN8 · Pull Request #7385 · RT-Thread/rt-thread (github.com)](https://github.com/RT-Thread/rt-thread/pull/7385)
@@ -49,8 +81,18 @@
 
   [[bsp\][lpc55sxx]add: adaptation LVGL by Z8MAN8 · Pull Request #7585 · RT-Thread/rt-thread (github.com)](https://github.com/RT-Thread/rt-thread/pull/7585)
 
+- 编写一篇lpc55s69 LVGL对接公众号
+
 - 修改 soft i2c 和 soft spi 格式，之后可以在 menuconfig 中直接选择想要使用软件模拟总线的引脚，大大方便了用户使用的便捷和灵活度。并且解决了硬件和软件 I2C 的冲突问题，之后软件 I2C 和硬件 I2C 可以同时使用，有效提高了用户的体验。
 
   [[bsp\][lpc55sxx]update: drv_soft_i2c drv_soft_spi by Z8MAN8 · Pull Request #7596 · RT-Thread/rt-thread (github.com)](https://github.com/RT-Thread/rt-thread/pull/7596)
 
-- LCD模块市售以后，在README中添加相关信息
+- 添加LPC55s69 RTduino 线程间通讯demo ：[[bsp\][lpc55sxx]update: update keil default project by Z8MAN8 · Pull Request #7689 · RT-Thread/rt-thread (github.com)](https://github.com/RT-Thread/rt-thread/pull/7689)
+
+- 重新生成lpc55sxx系列默认config文件及keil工程：[[bsp\][lpc55sxx]update: update keil default project by Z8MAN8 · Pull Request #7689 · RT-Thread/rt-thread (github.com)](https://github.com/RT-Thread/rt-thread/pull/7689)
+
+- 调整lpc55sxx系列drv_spi格式（暂未提交pr）
+
+- 测试使用lpc55sxx系列串口DMA功能（由于近期RTT更新串口设备框架，具体格式还没定，没有提交PR）
+
+- 编写一个快速生成对接RTT常用外设驱动的模板脚本：[Z8MAN8/RTT_drv_template_generator (github.com)](https://github.com/Z8MAN8/RTT_drv_template_generator)
