--- a/工作日志.md
+++ b/工作日志.md
@@ -54,3 +54,5 @@
   [[bsp\][lpc55sxx]update: drv_soft_i2c drv_soft_spi by Z8MAN8 · Pull Request #7596 · RT-Thread/rt-thread (github.com)](https://github.com/RT-Thread/rt-thread/pull/7596)
 
 - LCD模块市售以后，在README中添加相关信息
+
+- 7月3日为止：完善 mcx bsp 构建，优化对接 drv_pin,i2c,uart .
